--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@pixi/react": "^7.0.3",
+    "@polybase/auth": "^0.6.2",
+    "@polybase/client": "^0.6.2",
+    "@polybase/eth": "^0.6.2",
+    "@polybase/react": "^0.6.2",
+    "@polybase/util": "^0.6.2",
     "@rainbow-me/rainbowkit": "^0.12.8",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
